--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "mdb-react-ui-kit": "^5.1.0",
+    "mdbreact": "^5.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.1",
+    "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-social-icons": "^5.15.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
